Bug 1168125 - Fixed regression where the content panel wouldn't stretch to fill the entire availalbe space on non-e10s, r=bgrins

--- a/browser/themes/shared/devtools/performance.inc.css
+++ b/browser/themes/shared/devtools/performance.inc.css
@@ -147,10 +147,6 @@
 .realtime-disabled-message,
 .realtime-disabled-on-e10s-message {
   display: none;
-  /* This label does not want to wrap naturally (based on some combination of
-     it's parents and flex).  Quick and dirty way to force it to wrap -> don't
-     let it get bigger than half the screen size */
-  max-width: 60vw;
 }
 
 #performance-view[e10s="disabled"] .realtime-disabled-on-e10s-message {
